# tribe-scorer

./: .gitignore  README.md  pyproject.toml  score.py  setup.sh
tribe_scorer/: __init__.py  metrics.py  modal_app.py  regions.py
