[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tribe-scorer"
version = "0.1.0"
description = "Score creatives using Meta's TRIBE V2 neural response model"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.70",
    "nilearn>=0.10.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[tool.setuptools.packages.find]
include = ["tribe_scorer*"]
